--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  http: ^0.13.5
-  mime: ^1.0.4
+  http: ^0.13.0
+mime: ^1.0.0
+go_router: ^6.0.0
+
 
 dev_dependencies:
   flutter_test:
